Merging Gleb's fix: Fixed bug #32262: crash with decimal column.

The server crashed on optimization of queries
with a comparison of an indexed decimal column with
a string value.